force-app/main/driver-assistant/objects/Route__c/Route__c.object-meta.xml
<CustomObject>
    <label>Route</label>
    <nameField>
        <displayFormat>R-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>