force-app/main/driver-assistant/objects/Route__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>